<resources>
    <string name="app_name">MovieKu</string>
    <string name="title_popular">Popular</string>
    <string name="title_favorite">Favorite</string>
    <string name="args_idMovie">idMovie</string>
    <string name="title_detail">Detail</string>
    <string name="title_search">Search</string>
    <string name="database">movieku_data</string>
    <string name="retry">Retry</string>
    <string name="popularity">Popularity</string>
    <string name="members">Reviewer</string>
    <string name="synopsis_title">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="genres">Genres</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea eaque earum error minima qui quidem sunt, tempore veritatis vero vitae? Delectus, eveniet facere facilis laborum modi natus necessitatibus nihil odit provident repellendus repudiandae sequi temporibus?</string>
</resources>