<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.amora.movieku.ui.home.popular.PopularFragment"
        android:label="@string/title_popular"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.amora.movieku.ui.home.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.amora.movieku.ui.home.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_upcoming" />
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.amora.movieku.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"
        >
        <argument
            android:name="@string/args_idMovie"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>